--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -25,8 +25,10 @@
         var guid = "";
         var playerId = 0;
         var gameStarted = false;
-        var pos_x = 0;
-        var pos_y = 0;
+        var pos_x_0 = 0;
+        var pos_y_0 = 0;
+        var pos_x_1 = 0;
+        var pos_y_1 = 0;
 
         var canvas = document.getElementById('drawCanvas');
         var ctx = canvas.getContext('2d');
@@ -63,7 +65,7 @@
         socket.onmessage = function (event) {
             var reader = new FileReader();
             reader.onload = function() {
-                console.log("Data received: " + buf2hex(reader.result));
+                //console.log("Data received: " + buf2hex(reader.result));
                 var msgIdBytes = reader.result.slice(0, 4);
                 var dv = new DataView(msgIdBytes);
                 var msgId = dv.getInt32(0, true);
@@ -83,9 +85,30 @@
                     ctx.fillRect(0, 0, 1, 1);
 
                     gameStarted = true;
+                    console.log("I am player " + playerId);
                     var guidBytes = reader.result.slice(4, 16 + 4);
 
                     guid = buf2hex(guidBytes);
+                } else if (msgId == UpdateGameState) {
+                    var dv = new DataView(reader.result.slice(4, 32));
+                    var id = dv.getInt32(0, true);
+                    var new_pos_x = dv.getInt32(4, true);
+                    var new_pos_y = dv.getInt32(8, true);
+                    if (id == 0) {
+                        pos_x_0 = new_pos_x;
+                        pos_y_0 = new_pos_y;
+                    } else {
+                        pos_x_1 = new_pos_x;
+                        pos_y_1 = new_pos_y;
+                    }
+
+                    ctx.fillStyle = "red";
+                    ctx.fillRect(pos_x_0, pos_y_0, 1, 1);
+
+                    ctx.fillStyle = "blue";
+                    ctx.fillRect(pos_x_1, pos_y_1, 1, 1);
+
+
                 } else {
                     console.log("unkown message");
                 }
@@ -131,6 +154,17 @@
 
         function logKey(e) {
             if (gameStarted) {
+                var pos_x = 0;
+                var pos_y = 0;
+
+                if (playerId == 0) {
+                    pos_x = pos_x_0;
+                    pos_y = pos_y_0;
+                } else {
+                    pos_x = pos_x_1;
+                    pos_y = pos_y_1;
+                }
+
                 var has_moved = false;
                 if (e.key == "w") {
                     pos_y--;
@@ -167,8 +201,6 @@
                     msg.set([playerId,0,0,0], 20);
                     msg.set([pos_x,0,0,0], 24);
                     msg.set([pos_y,0,0,0], 28);
-
-                    //console.log("move " + guid  + " id " + playerId + " pos " + pos_x + ", " + pos_y);
             
                     socket.send(msg.buffer);
                 }
