--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <p id="guidId"></p>
+    <p id="PingId"></p>
     <button id="createLobby" > Create Lobby </button>
+    <button id="ping" > Ping </button>
     <form id="form">
         <br/>
         <input id="message" autocomplete="off" />
@@ -21,6 +23,8 @@
         var GameStart = 4;
         var MoveCommand = 5;
         var UpdateGameState = 6;
+        var PingRequest = 7;
+        var PingAnswer = 8;
 
         var guid = "";
         var playerId = 0;
@@ -30,12 +34,15 @@
         var pos_x_1 = 0;
         var pos_y_1 = 0;
 
+        var lastPingTime = new Date();
+
         var canvas = document.getElementById('drawCanvas');
         var ctx = canvas.getContext('2d');
         ctx.fillStyle = "black";
         ctx.fillRect(0, 0, 200, 200);
 
         var paragraph = document.getElementById('guidId');
+        var paragraphPing = document.getElementById('PingId');
 
         var webSocketProtocol = location.protocol == "https:" ? "wss:" : "ws:";
         var webSocketURI = webSocketProtocol + "//" + location.host + "/lobby";
@@ -107,8 +114,10 @@
 
                     ctx.fillStyle = "blue";
                     ctx.fillRect(pos_x_1, pos_y_1, 1, 1);
-
-
+                } else if (msgId == PingAnswer) {
+                    var now = new Date();
+                    var dt = now - lastPingTime;
+                    paragraphPing.innerText = "" + dt + " ms";
                 } else {
                     console.log("unkown message");
                 }
@@ -128,6 +137,15 @@
             var msg = new Uint8Array(4);       
             socket.send(msg.buffer);
         };
+
+        button = document.getElementById('ping');
+
+        button.onclick = function() {
+            var msg = new Uint8Array(4);
+            msg.set([PingRequest,0,0,0], 0);
+            lastPingTime = new Date();     
+            socket.send(msg.buffer);
+        }
         
         form.onsubmit = function () {
             playerId = 1;
